Prevent wrapping in secondary menu links

--- a/client-admin/src/app/app.component.scss
+++ b/client-admin/src/app/app.component.scss
@@ -19,3 +19,9 @@
     width: 100%;
   }
 }
+
+::ng-deep {
+  #secondaryMenu nav a {
+    white-space: nowrap;
+  }
+}
